# flecs_trigger_segfault_reproducer

./: CMakeLists.txt  shell.nix
src/modules/m_phys/: m_sys_phys.c  m_sys_phys.h
src/platform/pc/: main.c
